Frankbelford/uatv1ba/force-app/main/default/objects/ImpellamCPConnect__c/ImpellamCPConnect__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>RSS Global Customer Portal Connect</label>
</CustomObject>