Frankbelford/uatv1ba/force-app/main/default/objects/ImpellamCPConnect__c/fields/client_id__c.field-meta.xml
<CustomField>
    <fullName>client_id__c</fullName>
    <label>client id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>