Frankbelford/uatv1ba/force-app/main/default/objects/ImpellamCPConnect__c/fields/client_secret__c.field-meta.xml
<CustomField>
    <fullName>client_secret__c</fullName>
    <label>client secret</label>
    <length>100</length>
    <type>Text</type>
</CustomField>