Frankbelford/uatv1ba/force-app/main/default/objects/ImpellamCPConnect__c/fields/DocumentID__c.field-meta.xml
<CustomField>
    <fullName>DocumentID__c</fullName>
    <label>DocumentID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>