Frankbelford/uatv1ba/force-app/main/default/objects/ImpellamCPConnect__c/fields/ExpireAt__c.field-meta.xml
<CustomField>
    <fullName>ExpireAt__c</fullName>
    <label>ExpireAt</label>
    <type>DateTime</type>
</CustomField>