Frankbelford/uatv1ba/force-app/main/default/objects/ImpellamCPConnect__c/fields/HolidaysEndPointUrl__c.field-meta.xml
<CustomField>
    <fullName>HolidaysEndPointUrl__c</fullName>
    <label>HolidaysEndPointUrl</label>
    <type>Url</type>
</CustomField>