Frankbelford/uatv1ba/force-app/main/default/objects/ImpellamCPConnect__c/fields/LiveToken__c.field-meta.xml
<CustomField>
    <fullName>LiveToken__c</fullName>
    <label>LiveToken</label>
    <length>250</length>
    <type>Text</type>
</CustomField>