Frankbelford/uatv1ba/force-app/main/default/objects/ImpellamCPConnect__c/fields/PayslipEndPointUrl__c.field-meta.xml
<CustomField>
    <fullName>PayslipEndPointUrl__c</fullName>
    <label>PayslipEndPointUrl</label>
    <type>Url</type>
</CustomField>