Frankbelford/uatv1ba/force-app/main/default/objects/ImpellamCPConnect__c/fields/PayslipExportEndPointUrl__c.field-meta.xml
<CustomField>
    <fullName>PayslipExportEndPointUrl__c</fullName>
    <label>PayslipExportEndPointUrl</label>
    <type>Url</type>
</CustomField>