Frankbelford/uatv1ba/force-app/main/default/objects/ImpellamCPConnect__c/fields/PaySlipFolderID__c.field-meta.xml
<CustomField>
    <fullName>PaySlipFolderID__c</fullName>
    <label>PaySlipFolderID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>