Frankbelford/uatv1ba/force-app/main/default/objects/ImpellamCPConnect__c/fields/PDFBaseURL__c.field-meta.xml
<CustomField>
    <fullName>PDFBaseURL__c</fullName>
    <label>PDF Base URL</label>
    <type>Url</type>
</CustomField>