Frankbelford/uatv1ba/force-app/main/default/objects/ImpellamCPConnect__c/fields/Test_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Test_Candidate__c</fullName>
    <label>Test Candidate</label>
    <length>20</length>
    <type>Text</type>
</CustomField>