Frankbelford/uatv1ba/force-app/main/default/objects/ImpellamCPConnect__c/fields/TokenExpiryDateTime__c.field-meta.xml
<CustomField>
    <fullName>TokenExpiryDateTime__c</fullName>
    <label>Token Expiry DateTime</label>
    <length>50</length>
    <type>Text</type>
</CustomField>