Frankbelford/uatv1ba/force-app/main/default/objects/ImpellamCPConnect__c/fields/TokenURL__c.field-meta.xml
<CustomField>
    <fullName>TokenURL__c</fullName>
    <label>TokenURL</label>
    <type>Url</type>
</CustomField>